@@ -128,5 +128,9 @@
     <h6 class="h6">H6 Two</h6>
     <h6 class="h6">H6 Three</h6>
 
+    <p class="p">Paragraph One</p>
+    <p class="p">Paragraph Two</p>
+    <p class="p">Paragraph Three</p>
+    
   </body>
 </html>
