@@ -748,7 +748,22 @@ module PageObject
       platform.paragraph_for(identifier.clone)
     end
 
-        #
+    #
+    # Finds all paragraph elements
+    #
+    # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def paragraph_elements(identifier)
+      platform.paragraphs_for(identifier.clone)
+    end
+
+    #
     # Finds a paragraph
     #
     # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
