@@ -293,6 +293,12 @@ describe PageObject::ElementLocators do
       element.should be_instance_of PageObject::Elements::Paragraph
     end
 
+    it "should find all paragraph elements" do
+      watir_browser.should_receive(:ps).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.paragraph_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Paragraph 
+    end
+
     it "should find a file field element" do
       watir_browser.should_receive(:file_field).with(:id => 'blah').and_return(watir_browser)
       element = watir_page_object.file_field_element(:id => 'blah')
@@ -585,6 +591,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.paragraph_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::Paragraph
+    end
+
+    it "should find all paragraph elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.paragraph_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Paragraph 
     end
 
     it "should find a file field element" do
